fixed button flexwrap on mobile v3

--- a/style.css
+++ b/style.css
@@ -100,9 +100,10 @@ h1, h2, h3, h4 {
 }
 
 #dateSlider {
-    width: 180px;
-    max-width: 50vw;
+    width: calc(100% - 10px);
+    max-width: 200px;
     font-family: sans-serif;
+    box-sizing: border-box;
 }
 
 
